storage: updated SegmentCompactor & SegmentDeleter to use Immutable collections. SegmentManagerImpl updated accordingly